--- a/ankilc/lc0108.md
+++ b/ankilc/lc0108.md
@@ -12,3 +12,36 @@ note:
 - iterate hashmap
     - it means: iterate the key of hashmap
 ```
+
+## Contains Duplicate
+```
+Q: if array contains duplicate, return True. Else, return False.
+
+NOTE: 
+1. sort -> check the neighbor 
+in array
+2. hashset
+- set() init a hashset
+- add method can add data
+because it doesn't need the index and value,
+the hashset(without order) is more suitable for it
+
+```
+
+## 242. Valid Anagram #hashmap #array
+```
+Q: check 2 strings: 1. same characters 2. same count
+
+NOTE:
+1.
+- create 2 hashmaps
+    - index: character, value: count
+    - exist: +1, no exist: 1
+- compare 2 hashmaps
+    - iterate, check if it exists in another one, and check the count
+    - compare method:
+        - Hash_map_s.get('a', 0)的意思是:
+            尝试获取Hash_map_s字典中键'a'对应的值。如果键'a'存在，返回它对应的值。如果键'a'不存在，返回0。
+2.
+create one hashmap, then iterate -1 in the second time, it will be all 0 in the end if true.
+```
