--- a/ankilc/lc0108.md
+++ b/ankilc/lc0108.md
@@ -44,4 +44,19 @@ NOTE:
             尝试获取Hash_map_s字典中键'a'对应的值。如果键'a'存在，返回它对应的值。如果键'a'不存在，返回0。
 2.
 create one hashmap, then iterate -1 in the second time, it will be all 0 in the end if true.
+3. sorted method to order string then compare with ==
+```
+
+## Group Anagrams 
+```
+Q: regroup the array with same Anagram
+
+NOTE:
+- Create a Hashmap, the key is character and count, the value is array of same Anagram.
+- the hard part is first one, the solution is to init a array with 0 * 26, then use the ord(Unicode value) to map the character to integers, so we can use the count array to identify if it belongs to this group, then add to the dictionary's value.
+Attention:
+- defaultdict(list)
+    create a dict contains a lot of lists
+- list can't be the key, tuple can
+- .values() can return the dictionary's values
 ```
