--- a/ankilc/lc0108.md
+++ b/ankilc/lc0108.md
@@ -47,7 +47,7 @@ create one hashmap, then iterate -1 in the second time, it will be all 0 in the 
 3. sorted method to order string then compare with ==
 ```
 
-## Group Anagrams 
+## Group Anagrams #hashmap #array
 ```
 Q: regroup the array with same Anagram
 
@@ -59,4 +59,18 @@ Attention:
     create a dict contains a lot of lists
 - list can't be the key, tuple can
 - .values() can return the dictionary's values
+```
+
+## 125Valid Palindrome #twopointers
+```
+Q: reverse后string跟之前一样，忽略空格和大小写
+NOTE:
+- isalnum()判断是否是字母或num
+- str[::-1] -> reverse string
+- write a help function: to check if it is character or number
+- condition:
+    - 左右pointer没有相遇下,比较是否内容一样 l < r
+    - 如果不是aplphanum, pointer继续向中间移动
+Attention:
+- 命名规范点,不要绕晕自己
 ```
