--- a/ankilc/lc0108.md
+++ b/ankilc/lc0108.md
@@ -59,6 +59,15 @@ Attention:
     create a dict contains a lot of lists
 - list can't be the key, tuple can
 - .values() can return the dictionary's values
+class Solution:
+    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
+        res = defaultdict(list)
+        for str in strs:
+            count = [0] * 26
+            for i in str:
+                count[ord(i) - ord('a')] += 1
+            res[tuple(count)].append(str)
+        return res.values()
 ```
 
 ## 125Valid Palindrome #twopointers
@@ -73,4 +82,42 @@ NOTE:
     - 如果不是aplphanum, pointer继续向中间移动
 Attention:
 - 命名规范点,不要绕晕自己
+
+class Solution:
+    def isPalindrome(self, s: str) -> bool:
+        L, R = 0, len(s) -1 
+        while L < R:
+            while L < R and not self.isanum(s[L]):
+                L += 1
+            while L < R and not self.isanum(s[R]):
+                R -= 1
+            if s[L].lower() != s[R].lower():
+                return False
+            L += 1
+            R -= 1
+        return True
+    def isanum(self, c):
+        return (ord('a')<=ord(c)<=ord('z') or ord('A')<=ord(c)<=ord('Z') or ord('0')<=ord(c)<=ord('9'))
+```
+
+## 167 two sum #twopointers
+```
+Q: array with increasing order, return the index+1 if the value's sum equals target
+NOTE:
+- if the sum equals target, return 
+- if bigger, then right pointer -1
+- else, then left pointer +1
+
+class Solution:
+    def twoSum(self, numbers: List[int], target: int) -> List[int]:
+        l, r = 0, len(numbers) -1
+        while( l < r):
+            current_sum = numbers[l] + numbers[r]
+            if current_sum == target:
+                return [l+1, r+1]
+            elif current_sum > target:
+                r = r -1
+            else:
+                l = l +1
+        return []
 ```
