--- a/ankilc/lc0108.md
+++ b/ankilc/lc0108.md
@@ -121,3 +121,29 @@ class Solution:
                 l = l +1
         return []
 ```
+
+## 121 best-time-to-buy-and-sell-stock #slidewindow
+```
+Q: lists contains the price of different time, return a maxprofit between a span of this duration
+NOTE:
+- method seems like two pointers
+- calculate the profit between 2 pointers
+- if the profit is greater than 0, then it will compare to the existent profit
+- else, left will become the right pointer
+- and right move plus one
+
+class Solution:
+    def maxProfit(self, prices: List[int]) -> int:
+        L, R = 0, 1
+        max_p = 0
+        while (L<R and R<len(prices)):
+            if prices[R] > prices[L]:
+                new_profit = prices[R] - prices[L]
+                max_p = max(new_profit,max_p)
+                
+            else: 
+                L=R
+            R +=1
+        return max_p
+```
+
