--- a/ankilc/lc0108.md
+++ b/ankilc/lc0108.md
@@ -140,10 +140,45 @@ class Solution:
             if prices[R] > prices[L]:
                 new_profit = prices[R] - prices[L]
                 max_p = max(new_profit,max_p)
-                
             else: 
                 L=R
+                如果找到另一个更低的点，就reset为pointer L
             R +=1
         return max_p
+```
+
+## 
+```
+Q: return the longest length of the unrepeat substring #set #slidewindow
+Confidence: 1
+NOTE:
+- use a set to include the result's substring
+- if the right pointer already in the result, 
+- it needs to move the left pointer until it doesnt include the substring
+- then add the right pointer into the res
+- then update the res with the maximum comparison
+
+I always want to identify the duplicate by the length of string. 
+it seems set is more suitable for the duplicate, if the right pointer in the set
+then we need to trim the left to another window
+then we'll move the right pointer to righter
+then we need to update the result
+
+The window move condition is when the right pointer is included in the set
+then we need to move the left pointer to not satisfy above condition
+then move right pointer
+
+class Solution:
+    def lengthOfLongestSubstring(self, s: str) -> int:
+        charset = set()
+        l = 0
+        max_len = 0
+        for r in range(len(s)):
+            while s[r] in charset:
+                charset.remove(s[l])
+                l+=1
+            charset.add(s[r])
+            max_len = max(max_len, r-l+1)
+        return max_len
 ```
 
