--- a/ankilc/lc0108.md
+++ b/ankilc/lc0108.md
@@ -11,12 +11,25 @@ note:
     enumerate(lists)
 - iterate hashmap
     - it means: iterate the key of hashmap
+# note: 
+# - iterate the array
+# - to see if the hashmap has the target
+#     - if yes, return this hashmap Value
+#     - else, store this to hashmap 
+def twoSum(self, nums: List[int], target: int) -> List[int]:
+    Hash_map = {}
+    for i, value in enumerate(nums):
+        goal_value = target - value
+        if goal_value in Hash_map:
+            return [Hash_map[goal_value], i]
+        else:
+            Hash_map[value] = i
+    return
 ```
 
 ## Contains Duplicate
-```
 Q: if array contains duplicate, return True. Else, return False.
-
+```
 NOTE: 
 1. sort -> check the neighbor 
 in array
@@ -25,13 +38,19 @@ in array
 - add method can add data
 because it doesn't need the index and value,
 the hashset(without order) is more suitable for it
-
+def containsDuplicate(self, nums: List[int]) -> bool:
+    Hashmap = {}
+    for i, value in enumerate(nums):
+        if value in Hashmap:
+            return True
+        else:
+            Hashmap[value] = i
+    return False
 ```
 
 ## 242. Valid Anagram #hashmap #array
-```
 Q: check 2 strings: 1. same characters 2. same count
-
+```
 NOTE:
 1.
 - create 2 hashmaps
@@ -45,12 +64,26 @@ NOTE:
 2.
 create one hashmap, then iterate -1 in the second time, it will be all 0 in the end if true.
 3. sorted method to order string then compare with ==
+class Solution:
+    def isAnagram(self, s: str, t: str) -> bool:
+        if len(s) != len(t):
+            return False
+
+        hash_map = {}
+        for char in s:
+            hash_map[char] = hash_map.get(char, 0) + 1
+        
+        for char in t:
+            if char not in hash_map or hash_map[char] == 0:
+                return False
+            hash_map[char] -= 1
+
+        return all(value == 0 for value in hash_map.values())
 ```
 
 ## Group Anagrams #hashmap #array
-```
 Q: regroup the array with same Anagram
-
+```
 NOTE:
 - Create a Hashmap, the key is character and count, the value is array of same Anagram.
 - the hard part is first one, the solution is to init a array with 0 * 26, then use the ord(Unicode value) to map the character to integers, so we can use the count array to identify if it belongs to this group, then add to the dictionary's value.
@@ -147,10 +180,10 @@ class Solution:
         return max_p
 ```
 
-## 
-```
+## 3Longest Substring Without Repeating Characters
 Q: return the longest length of the unrepeat substring #set #slidewindow
 Confidence: 1
+```
 NOTE:
 - use a set to include the result's substring
 - if the right pointer already in the result, 
